# GMAIL

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bloomFilter.cpp  bloomFilter.h  bloom_filter_test.cpp  docker-compose.yml  hashFactory.cpp  hashFactory.h  hashFunction.h  hashable.h  main.cpp  package-lock.json  repeatedHash.cpp  repeatedHash.h  runProgram.cpp  runProgram.h  test_api_verbose.sh  test_blackList.cpp  test_bloomFilter.cpp
Androidproject/app/: build.gradle.kts
Androidproject/app/src/main/: AndroidManifest.xml
Androidproject/gradle/: libs.versions.toml
Androidproject/gradle/wrapper/: gradle-wrapper.properties
Bloom_Filter_Server/: CMakeLists.txt  Dockerfile  docker-compose.yml
Bloom_Filter_Server/Tests/: dockerfile
Bloom_Filter_Server/client/: Client.py  dockerfile
Bloom_Filter_Server/src/bloom_Filter/: bloomFilter.cpp  hashFactory.h
Bloom_Filter_Server/src/commands/: AddCommand.cpp  CheckCommand.cpp  DeleteCommand.cpp
Bloom_Filter_Server/src/interfaces/: IFilterService.h
Bloom_Filter_Server/src/ioHandling/: inputManager.cpp  inputManager.h
Bloom_Filter_Server/src/networking/: Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h
Bloom_Filter_Server/src/services/: ApplicationService.h  BloomFilterService.cpp  BloomFilterService.h  CommandProcessor.cpp
Bloom_Filter_Server/src/utils/: DefaultURLNormalizer.cpp  DefaultURLNormalizer.h  URLValidator.cpp
Internet_server/: package-lock.json  package.json
Internet_server/docker/: Dockerfile
Internet_server/src/: app.js  server.js
Internet_server/src/Controllers/: blacklistController.js  emailController.js  labelController.js  userController.js
Internet_server/src/Models/: emailModel.js  labelModel.js  userModel.js
Internet_server/src/Routes/: blacklistRoutes.js  emailRoutes.js  labelRoutes.js  userRoutes.js
Internet_server/src/public/: index.html  registration.html
Internet_server/src/public/css/: registration.css
Internet_server/src/public/js/: registration.js
Internet_server/src/services/: blacklistClient.js  emailService.js
Internet_server/src/utils/: emailValidator.js
Tests/: test_BloomFilter.cpp  test_bloomFilter.cpp  test_fileManager.cpp  test_inputManager.cpp  test_main.cpp  test_server.cpp
Wiki/: 01_setup.md  02_Authentication.md  03_HomeAndMails.md  API-Overview.md  Android-Setup.md  Backend-Setup.md  BloomFilterServer.md  Deployment.md  Environment.md  Frontend-Setup.md  Home.md  Prerequisites.md  QuickStart-Docker.md  Running-Tests.md  Services-Architecture.md  Troubleshooting.md
backend/: .dockerignore  Dockerfile  package-lock.json  package.json
backend/docker/: Dockerfile
backend/src/: app.js  server.js
backend/src/Controllers/: blacklistController.js  emailController.js  labelController.js  userController.js
backend/src/Middleware/: authMiddleware.js
backend/src/Models/: emailModel.js  labelModel.js  userModel.js
backend/src/Routes/: blacklistRoutes.js  emailRoutes.js  labelRoutes.js  userRoutes.js
backend/src/services/: blacklistClient.js  emailService.js  labelService.js  userService.js
bloomFilter /: bloomFilter.cpp  bloomFilter.h  hashFactory.cpp  hashFactory.h  repeatedHash.cpp  repeatedHash.h
bloom_Filter/: bloomFilter.cpp  bloomFilter.h  hashFactory.cpp  hashFactory.h  repeatedHash.cpp  repeatedHash.h
client/: Client.py  dockerfile
data/: blacklist.txt
frontend/: package-lock.json
frontend/android/: local.properties
frontend/android/app/: build.gradle.kts
frontend/frontend-web/docker/: dockerfile
frontend/frontend-web/public/: index.html
frontend/frontend-web/src/: index.css
frontend/frontend-web/src/contexts/: UserContext.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: MailList.css  MailList.js
frontend/src/components/common/: Icon.css  IconButton.css  IconButton.js
frontend/src/components/compose/: Compose.css  Compose.js
frontend/src/components/createLabel/: CreateLabel.css  CreateLabel.js
frontend/src/components/header/: GmailLogo.js  Header.css  Header.js  ProfileImage.js  SearchBar.css  SearchBar.js  userActions.css  userActions.js
frontend/src/components/labelMenu/: LabelMenu.js
frontend/src/components/login/: login.css  login.js
frontend/src/components/mail/: mail.js
frontend/src/contexts/: UserContext.js
frontend/src/pages/: InboxPage.css  InboxPage.js  MailList.css  MailList.js  MainLayaout.jsx  MainLayout.css  MainLayout.js  mailPage.css  mailPage.js
frontend/src/services/: Client.js  ProtectedRoute.js
frontend/src/servieces/: client.js
frontend/web/docker/: Dockerfile
ioHandling/: fileManager.cpp  fileManager.h  inputManager.cpp  inputManager.h
src/bloom_Filter/: bloomFilter.cpp  bloomFilter.h  hashFactory.cpp  hashable.h  repeatedHash.cpp  repeatedHash.h
src/commands/: AddCommand.cpp  AddCommand.h  AddCommandCreator.cpp  AddCommandCreator.h  CheckCommand.cpp  CheckCommand.h  CheckCommandCreator.cpp  CheckCommandCreator.h  CommandFactory.cpp  CommandFactory.h  DeleteCommand.cpp  DeleteCommand.h  DeleteCommandCreator.cpp  DeleteCommandCreator.h
src/interfaces/: IApplicationService.h  IBitArrayStorage.h  IBitVector.h  IBlacklistStorage.h  IBloomFilter.h  ICommand.h  ICommandCreator.h  IFilterService.h  IStorageService.h  IURLFormatter.h  IURLNormalizer.h  IURLValidator.h  hashable.h
src/ioHandling/: InputProcessor.cpp  InputProcessor.h  inputManager.cpp  inputManager.h
src/networking/: ConnectionHandler.cpp  ConnectionHandler.h  ISocketConnection.h  ISocketListener.h  Server.cpp  Server.h  TCPSocketConnection.cpp  TCPSocketConnection.h  TCPSocketListener.cpp  TCPSocketListener.h
src/services/: ApplicationConfig.cpp  ApplicationConfig.h  ApplicationService.cpp  ApplicationService.h  BloomFilterService.cpp  BloomFilterService.h  CommandProcessor.cpp  CommandProcessor.h  FileStorageService.cpp  FileStorageService.h
src/utils/: DefaultBitVector.cpp  DefaultBitVector.h  DefaultURLFormatter.cpp  DefaultURLFormatter.h  DefaultURLNormalizer.cpp  DefaultURLNormalizer.h  URLValidator.cpp  URLValidator.h
(+243 files in other folders)
